--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
