--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
     "react-redux": "^8.1.2",
