--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
+    "recharts": "^2.9.0",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2"
